--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,40 @@
-#data
-pyspa
+# Core
+pandas==2.1.3
+numpy==1.24.3
+scikit-learn==1.3.2
+
+# Parquet support for pandas
+pyarrow==14.0.1
+
+# PySpark local
+pyspark==3.5.0
+
+# CV & ML
+torch==2.1.0
+torchvision==0.16.0
+sentence-transformers==2.2.2
+Pillow==10.1.0
+
+# CLIP
+ftfy==6.1.1
+regex==2023.10.3
+git+https://github.com/openai/CLIP.git
+
+# Vector DB
+chromadb==0.4.18
+
+# API
+fastapi==0.104.1
+uvicorn==0.24.0
+
+# Dashboard
+streamlit==1.28.2
+plotly==5.18.0
+psutil==5.9.8
+
+# Utilities / notebooks
+tqdm==4.66.1
+python-dotenv==1.0.0
+matplotlib==3.8.2
+seaborn==0.13.0
+jupyter==1.0.0
