--- a/requirements.txt
+++ b/requirements.txt
@@ -26,14 +26,4 @@ plotly==5.18.0
 requests==2.31.0
 
 # System utilities
-psutil==5.9.8
-tqdm==4.66.1
-python-dotenv==1.0.0
-matplotlib==3.8.2
-seaborn==0.13.0
-
-# Transformers (compatible with torch 2.3)
-transformers==4.41.0
-
-# Optional: Jupyter for local dev
-jupyter==1.0.0
+psutil==5.9.
