--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,22 @@
-# Core Data Processing
-pandas==2.1.3
-numpy==1.26.4
-scikit-learn==1.3.2
-pyarrow==14.0.1
+pandas>=2.1.0
+numpy>=1.26.0
+scikit-learn>=1.3.0
+pyarrow>=14.0.0
 
-# Computer Vision & ML (latest stable versions that work together)
-torch==2.3.1
-torchvision==0.18.1
-sentence-transformers==3.0.1
-Pillow==10.1.0
+torch>=2.0.0
+torchvision>=0.15.0
+sentence-transformers>=3.0.0
+Pillow>=10.0.0
 
-# CLIP (use prebuilt package, not git source)
-openai-clip==1.0.1
-ftfy==6.1.1
-regex==2023.10.3
+openai-clip>=1.0.0
+chromadb>=0.4.0
 
-# Vector Database (ChromaDB - using new PersistentClient API)
-chromadb==0.4.18
+streamlit>=1.28.0
+plotly>=5.18.0
+requests>=2.31.0
 
-# API & Web
-fastapi==0.104.1
-uvicorn==0.24.0
-streamlit==1.28.2
-plotly==5.18.0
-requests==2.31.0
-
-# System utilities
-psutil==5.9.
+psutil>=5.9.0
+tqdm>=4.66.0
+python-dotenv>=1.0.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
